--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,12 @@ export("%>%")
 export(heatmaper)
 export(runDEAHCapp)
 import(Hmisc, except = c(summarize, src))
+import(dplyr)
 import(egg)
+import(ggplot2)
 import(gridExtra)
 import(magrittr)
+import(rlang)
 import(shiny)
-import(tidyverse)
 import(viridis)
 importFrom(magrittr,"%>%")
